<resources>
    <string name="app_name">TowerMeasurement</string>
    <string name="emailhint">Email</string>
    <string name="pwdhint">Password</string>

    <!-- Menu -->
    <string name="menuitem1">Help</string>
    <string name="menuitem2">New</string>
    <string name="menuitem3">Use template</string>
    <string name="menuitem4">Load from server</string>
    <string name="menuitem5">Save to server</string>
    <string name="menuitem6">Load from storage</string>
    <string name="menuitem7">Save to storage</string>
    <string name="menuitem8">Quit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Titles -->
    <string name="title_measure_activity">Measurement input</string>
    <string name="search_dialog_title">List of accessible buildings</string>
    <string name="search_request_title">Entering search parameters</string>
    <string name="title_view_selected">Selected building</string>
    <string name="title_report">Preview report section</string>
    <string name="title_new">New building</string>
    <string name="title_last_loaded_building">Last input building</string>

    <!-- parcel names -->
    <string name="measureslist">measureslist</string>
    <string name="startmeasures">startmeasures</string>
    <string name="ismeasureschanged">ismeasureschanged</string>
    <string name="startresults">startresults</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Russian -->
    <string name="app_name_ru">АМС-контроль</string>
    <!--<string name="emailhint">Email</string>
    <string name="pwdhint">Password</string>-->

    <!-- Menu -->
    <string name="menuitem1_ru">Справка</string>
    <string name="menuitem2_ru">Новый объект</string>
    <string name="menuitem3_ru">Использовать шаблон</string>
    <string name="menuitem4_ru">Загрузить из удаленной базы</string>
    <string name="menuitem5_ru">Выгрузить в удаленную базу</string>
    <string name="menuitem6_ru">Загрузить из устройства</string>
    <string name="menuitem7_ru">Выгрузить на устройство</string>
    <string name="menuitem9_ru">Удалить объекты</string>
    <string name="menuitem8_ru">Выход</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->

    <!-- Buttons -->
    <string name="login_ru">Вход</string>


    <!-- Titles -->

    <string name="search_dialog_title_ru">Перечень доступных объектов</string>
    <string name="search_request_title_ru">Введите параметры поиска</string>
    <string name="title_view_selected_ru">Выбранный объект</string>
    <string name="title_report_ru">Создание отчета</string>
    <string name="title_new_ru">Новое сооружение</string>
    <string name="title_last_loaded_building_ru">Последний объект</string>
    <string name="sign_in">Авторизация:</string>

    <!--&lt;!&ndash; parcel names &ndash;&gt;
    <string name="measureslist">measureslist</string>
    <string name="startmeasures">startmeasures</string>
    <string name="ismeasureschanged">ismeasureschanged</string>
    <string name="startresults">startresults</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    -->


    <!-- ***************** -->
    <!-- Main Screen  RU-->
    <!-- TextView -->
    <string name="sections_ru">Секции:</string>
    <string name="conf_ru">Конфиг:</string>

    <string name="main_screen_id_ru">ID</string>
    <string name="main_screen_name_ru">Код / Название</string>
    <string name="main_screen_address_ru">Адрес</string>

    <string name="btn_main_get">Загр.</string>

    <!-- Fragments -->

    <!-- Search form dialog -->
    <string name="search_form_main_name_ru">Название:</string>
    <string name="search_form_main_address_ru">Адрес:</string>
    <string name="search_form_main_title_ru">Параметры поиска</string>
    <string name="btn_search_form_main_ok_ru">OK</string>
    <string name="btn_search_form_main_cancel_ru">Отмена</string>

    <!-- List of object -->
    <string name="inner_search_result_id_ru">ID:</string>
    <string name="inner_search_result_name_ru">Назв:</string>
    <string name="inner_search_result_address_ru">Адр:</string>
    <string name="inner_search_result_date_ru">Дата:</string>
    <string name="inner_search_result_dialog_title_ru">Доступные объекты</string>

    <!-- Sections parameters -->
    <string name="base_width_ru">Основание:</string>
    <string name="top_width_ru">Топ:</string>
    <string name="section_height_ru">Высота:</string>
    <string name="reserve_ru">Резерв:</string>

    <!-- Fragment edit section dialog-->
    <string name="section_dialog_fragment_title">Параметры секции</string>
    <string name="section_dialog_fragment_section_ru">Секция № </string>
    <string name="section_dialog_fragment_bottom_width_ru">Основание, мм:</string>
    <string name="section_dialog_fragment_top_width_ru">Топ, мм:</string>
    <string name="section_dialog_fragment_height_ru">Высота, мм:</string>

    <string name="btn_section_dialog_fragment_main_ok_ru">OK</string>
    <string name="btn_section_dialog_fragment_main_cancel_ru">Отмена</string>


    <!-- Buttons -->
    <string name="register_btn_ru">Регистрация</string>
    <string name="continue_btn_ru">Продолжить</string>
    <string name="reset_btn_ru">Сброс</string>
    <string name="update_btn_ru">Принять</string>
    <string name="measure_btn_ru">Измерения</string>
    <string name="ok_btn_ru">Ок</string>
    <string name="cancel_btn_ru">Отмена</string>
    <string name="report_btn_ru">Отчет</string>

    <!-- ***************** -->
    <!-- Measurement screen -->

    <string name="title_measure_activity_ru">Ввод измерений</string>

    <string name="contractor_ru">Исполнитель</string>
    <string name="measure_date_ru">Дата</string>
    <string name="measure_group_measurement_ru">Группа измерений:</string>

    <!-- Fragment lv item-->
    <string name="left_angle_ru">Левый</string>
    <string name="right_angle_ru">Правый</string>
    <string name="side_ru">Сторона:</string>
    <string name="theo_distance_ru">Дистанция:</string>
    <string name="theo_height_ru">Тео высота:</string>
    <string name="azimuth_ru">Азимут:</string>
    <string name="position_ru">Поз:</string>
    <string name="date_hint_ru">ДД-ММ-ГГГГ</string>

    <!-- Measurement fragment dialog-->
    <string name="title_measure_group_fragment_measurement_ru">Группа измерений № %1$d</string>
    <string name="theo_distance_measure_group_fragment_measurement_ru">Дистанция, мм</string>
    <string name="theo_height_measure_group_fragment_measurement_ru">Высота, мм</string>
    <string name="azimuth_measure_group_fragment_measurement_ru">Азимут</string>
    <string name="side_measure_group_fragment_measurement_ru">Сторона</string>

    <string name="title_measurement_dialog_ru">Ввод/редактирование измерения</string>
    <string name="measurement_number_ru">Измерение № </string>
    <string name="measurement_group_ru">Группа № </string>
    <string name="left_angle_measurement_dialog_ru">Левый угол:</string>
    <string name="right_angle_measurement_dialog_ru">Правый угол:</string>
    <string name="distance_measurement_dialog_ru">Дистанция:</string>
    <string name="azimuth_measurement_dialog_ru">Азимут:</string>
    <string name="theo_height_measurement_dialog_ru">Тео высота:</string>
    <string name="btn_cancel_measure_dialog_frag_measurement_ru">Отмена</string>
    <string name="btn_ok_measure_dialog_frag_measurement_ru">ОК</string>
    <!-- ****************************** -->

    <!-- Report Screen -->

    <!-- TextView Report Screen-->
    <string name="configuration_ru">Конфигурация: </string>
    <string name="type_ru">Тип: </string>
    <string name="height_ru">Высота, мм: </string>
    <string name="tolerance_ru">Допуск, мм: </string>
    <string name="total_offset_ru">Макс отклонение, мм: </string>

    <!-- Buttons -->
    <string name="full_info_ru">Подробнее</string>
    <string name="create_report_ru">На главный экран</string>


    <!-- Common messages-->
    <string name="no_object_found">Объекты не найдены</string>

    <!-- Journal fragment_journal_page -->
    <string name="point_journal_ru">Стоянка: </string>
    <string name="theo_distance_journal_ru">Расстояние до теодолита: </string>
    <string name="row_number_journal_ru">№</string>
    <string name="height_journal_ru">H,мм</string>
    <string name="left_journal_ru">Лево,\u00b0</string>
    <string name="right_journal_ru">Право,\u00b0</string>
    <string name="average_journal_ru">Сред,\u00b0</string>
    <string name="deviation_degree_journal_ru">Откл,\u00b0</string>
    <string name="deviation_mm_journal_ru">Откл,мм</string>
</resources>