<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        >
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/point_journal_ru"
            android:background="@color/white"
            />
        <TextView
            android:id="@+id/tvPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="A"
            android:background="@color/white"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        >
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/theo_distance_journal_ru"
            android:background="@color/white"
            />
        <TextView
            android:id="@+id/tvTheoDistance_journal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:text="000"
            android:background="@color/white"
            />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        >
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textAlignment="center"
            android:text="@string/row_number_journal_ru"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/light_blue_A400"
            />
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/height_journal_ru"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/light_blue_A400"
            />
        <TextView
            android:layout_width="52dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/left_journal_ru"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/light_blue_A400"
            />
        <TextView
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/right_journal_ru"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/light_blue_A400"
            />
        <TextView
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/average_journal_ru"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/light_blue_A400"
            />
        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/deviation_degree_journal_ru"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/light_blue_A400"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:text="@string/deviation_mm_journal_ru"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/light_blue_A400"
            />
    </TableRow>
    <ListView
        android:id="@+id/lvJournal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>