<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.result.ReportPrepareActivity"
    android:background="@color/sandy">
    <TextView
        android:id="@+id/tvTitleReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30dp"
        android:textColor="@color/maincolor"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/title_report_ru"
        />
    <TextView
        android:id="@+id/tvAddressReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleReport"
        android:textSize="18dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textColor="@color/black"
        android:text="Address"
        />


    <TableRow
        android:id="@+id/trGraphJournal"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toBottomOf="@id/tvAddressReport"
        app:layout_constraintBottom_toTopOf="@id/trReportInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ImageButton
            android:id="@+id/imbtnXOZ"
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:background="@drawable/imbtnshape"
            android:scaleType="centerInside"
            android:src="@drawable/testcube" />

        <ImageButton
            android:id="@+id/imbtnJournal"
            android:layout_width="176dp"
            android:layout_height="150dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/imbtnshape"
            android:scaleType="centerInside"
            android:src="@drawable/table" />
    </TableRow>

    <TableRow
        android:id="@+id/trReportInfo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/trGraphJournal"
        app:layout_constraintBottom_toTopOf="@id/btnFullInfoReport"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ImageButton
            android:id="@+id/imbtn_report"
            android:layout_width="140dp"
            android:layout_height="195dp"
            android:layout_marginLeft="36dp"
            android:layout_marginBottom="190dp"
            android:background="@drawable/imbtnshape"
            android:scaleType="centerInside"
            android:src="@drawable/title"
            />

        <TableLayout
            android:id="@+id/tlInfoReport"
            android:layout_width="230dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/type_ru"
                    />
                <TextView
                    android:id="@+id/tvTypeReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:text="type"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/configuration_ru"
                    />
                <TextView
                    android:id="@+id/tvConfigReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="3"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/height_ru"
                    />
                <TextView
                    android:id="@+id/tvHeightReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="72000"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/tolerance_ru"
                    />
                <TextView
                    android:id="@+id/tvPossibleDeviation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="72"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="@string/total_offset_ru"
                    />
                <TextView
                    android:id="@+id/tvFactDeviation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:text="120"
                    />
            </TableRow>
        </TableLayout>
    </TableRow>

    <Button
        android:id="@+id/btnFullInfoReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        app:layout_constraintTop_toBottomOf="@+id/trReportInfo"
        app:layout_constraintBottom_toTopOf="@+id/btnSendEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="36dp"
        android:text="@string/full_info_ru"
        android:visibility="gone"
        >

    </Button>

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/create_report_ru"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFullInfoReport">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>