<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="6dp"
    android:background="@color/black">
    <LinearLayout
        android:id="@+id/layout_inner_search_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:background="#F4F2EC">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp"
            >
            <TextView
                android:id="@+id/tvSearchId_inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textSize="12dp"
                android:textColor="@color/maincolor"
                android:text="@string/inner_search_result_id_ru"/>
            <TextView
                android:id="@+id/valSearchId_inner"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_weight=".5"
                android:paddingLeft="4dp"
                android:textColor="@color/black"
                android:background="@color/white"
                />
            <TextView
                android:id="@+id/tvSearchName_inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="12dp"
                android:textColor="@color/maincolor"
                android:text="@string/inner_search_result_name_ru"/>
            <TextView
                android:id="@+id/valSearchName_inner"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:paddingLeft="4dp"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/tvSearchDate_inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="12dp"
                android:textColor="@color/maincolor"
                android:text="@string/inner_search_result_date_ru"/>
            <TextView
                android:id="@+id/tvCreationDate_inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textAlignment="center"
                android:background="@color/white"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:id="@+id/tvSearchAddress_inner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="4dp"
                android:textSize="12dp"
                android:textColor="@color/maincolor"
                android:text="@string/inner_search_result_address_ru"/>
            <TextView
                android:id="@+id/valSearchAddress_inner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:paddingTop="2dp"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:paddingBottom="2dp"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:background="@color/white" />
        </TableRow>
    </LinearLayout>
</LinearLayout>