<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="6dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="4dp">
            <TextView
                android:id="@+id/tvSearchId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textSize="12dp"
                android:text="@string/inner_search_result_id_ru"/>
            <TextView
                android:id="@+id/valSearchId"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:layout_weight=".5"
                android:paddingLeft="4dp"
                android:textColor="@color/black"
                android:background="@color/grey_font" />
            <TextView
                android:id="@+id/tvSearchName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="12dp"
                android:text="@string/inner_search_result_name_ru"/>
            <TextView
                android:id="@+id/valSearchName"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:paddingLeft="4dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:background="@color/grey_font"/>
            <TextView
                android:id="@+id/tvSearchDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="12dp"
                android:text="@string/inner_search_result_date_ru"/>
            <TextView
                android:id="@+id/tvCreationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textAlignment="center"
                android:background="@color/grey_font"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/tvSearchAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.01"
                android:layout_marginLeft="4dp"
                android:textSize="12dp"
                android:text="@string/inner_search_result_address_ru"/>
            <TextView
                android:id="@+id/valSearchAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:paddingTop="2dp"
                android:paddingLeft="3dp"
                android:paddingRight="2dp"
                android:paddingBottom="2dp"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:background="@color/grey_font" />
        </TableRow>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="9"
        >

        <CheckBox
            android:id="@+id/cbLoadObject"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right">

        </CheckBox>

    </LinearLayout>

</LinearLayout>